fix(landing page): :bug: fix more overflowing

--- a/assets/main.css
+++ b/assets/main.css
@@ -7,3 +7,13 @@
     accent-color: #ffdd19;
     scrollbar-color: #ffdd19 #303741;
 }
+
+@layer utilities {
+    .overflow-fix {
+        @apply leading-normal !important;
+    }
+
+    .overflow-fix-2 {
+        @apply leading-[1.1] !important;
+    }
+}
